--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,15 @@ body {
     color: var(--color-mid);
 }
 
+.info {
+    padding: 1rem;
+
+    th, td {
+        text-align: left;
+        min-width: 30vw;
+    }
+}
+
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -68,7 +77,7 @@ input[type="file"]::file-selector-button {
 
 .control-wrapper {
     display: flex;
-    margin: 16px;
+    margin: 1rem;
     flex-direction: column;
     gap: 8px;
     z-index: 100;
